fixed login and forgot password page css bug where form fields were not centered

--- a/src/stylesheets/partials/_forms.sass
+++ b/src/stylesheets/partials/_forms.sass
@@ -589,7 +589,6 @@ form.search-form
     display: block
   button
     margin: 0 auto
-    display: block
   .error-list
     position: relative
     left: 20px
